@@ -1,0 +1,10 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: athdir
+Description: The Athena directory location library
+Version: @PACKAGE_VERSION@
+Libs: -L${libdir} -lathdir
+Cflags: -I${includedir}
