@@ -5,8 +5,9 @@ debathena-libathdir (10.0.1-0debathena1) unstable; urgency=low
     Athena aclocal.m4. (Trac: #334)
   * Bump debhelper compatibility.
   * Build libathdir as a shared library. (Trac: #70)
+  * Ship a pkgconfig file for libathdir.
 
- -- Evan Broder <broder@mit.edu>  Wed, 28 Apr 2010 15:00:12 -0400
+ -- Evan Broder <broder@mit.edu>  Wed, 28 Apr 2010 16:15:41 -0400
 
 debathena-libathdir (10.0.0-0debathena2) unstable; urgency=low
 
